--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <H3>TITULO H3</H3>
      <H4>TITULO H4</H4>
      <H5>TITULO H5</H5>
-     <H6>TITULO H6</H6>
+     <H6>TITULO H7</H6>
 
     <!-- PARRAFOS -->
      <P>hola este es la prueba hola <br> flaca</P>
@@ -25,9 +25,9 @@
     </ul>
 <!-- Lista ordenada -->
  <ol>
-    <li>cebolla</li>
-    <li>pimenton</li>
-    <li>tomate</li>
+    <li>andres</li>
+    <li>maga</li>
+    <li>cuquin</li>
  </ol>
 
  <!-- imagenes -->
