--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web de josefino</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Encabezados -->
@@ -16,6 +17,11 @@
 
     <!-- PARRAFOS -->
      <P>hola este es la prueba hola <br> flaca</P>
+
+     <div>
+        <h3>este testo es un h3</h3>
+        <p>parrafo dentro de un div</p>
+     </div>
 
 <!-- Listas no ordenadas -->
     <ul>
