selector por clases y por id

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
      <H6>TITULO H7</H6>
 
     <!-- PARRAFOS -->
-     <P>hola este es la prueba hola <br> flaca</P>
+     <P class="texto">hola este es la prueba hola <br> flaca</P>
 
      <div>
         <h3>este testo es un h3</h3>
-        <p>parrafo dentro de un div</p>
+        <p class="texto">parrafo dentro de un div</p>
      </div>
 
 <!-- Listas no ordenadas -->
     <ul>
         <li>tomate</li>
-        <li>cebolla</li>
+        <li id="cebolla">cebolla</li>
         <li>aji</li>
     </ul>
 <!-- Lista ordenada -->
